--- a/thanks.html
+++ b/thanks.html
@@ -1975,6 +1975,10 @@
             <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
           </tr>
           <tr>
+            <td>池袋#2(東武) 発車放送(最終電車)</td>
+            <td><a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.様</a></td>
+          </tr>
+          <tr>
             <td>アイネ・クライネ・ナハトムジークより第三楽章メヌエット</td>
             <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
           </tr>
@@ -1989,6 +1993,14 @@
           <tr>
             <td>池袋#3(東武) 発車放送</td>
             <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>池袋#3(東武) 発車放送(最終電車)</td>
+            <td><a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.様</a></td>
+          </tr>
+          <tr>
+            <td>池袋#4(東武) 発車放送(最終電車)</td>
+            <td><a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.様</a></td>
           </tr>
           <tr>
             <td>交響曲第6番「田園」より第一楽章アレグロ・マ・ノン・トロッポ</td>
