--- a/platform/ikebukuro_tj5_o1.html
+++ b/platform/ikebukuro_tj5_o1.html
@@ -311,6 +311,11 @@
                 // tojime.play();
               }
           });
+      
+        // 曲が終了したとき
+        audio.addEventListener("ended", () => {
+          if (isPlaying) isPlaying = false;
+        });
     </script>
 
 <!--       </div> -->
