--- a/line/saikyo.html
+++ b/line/saikyo.html
@@ -65,8 +65,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2656c06a0efd45b4bc67d32d428c298b~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2656c06a0efd45b4bc67d32d428c298b~mv2.png" alt="渋谷駅">
-          <p>渋谷駅 【未収録】</p>
-<!--           <a href="../station/shibuya.html"></a> -->
+          <p>渋谷駅</p>
+          <a href="../station/shibuya.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2a052e2da6c345aaa2fa9f70dbd539ec~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2a052e2da6c345aaa2fa9f70dbd539ec~mv2.png" alt="新宿駅">
