--- a/line/shonan_shinjuku.html
+++ b/line/shonan_shinjuku.html
@@ -105,8 +105,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_94e7fc9e6fda4c9781f8ad623f234ad0~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_94e7fc9e6fda4c9781f8ad623f234ad0~mv2.png" alt="渋谷駅">
-          <p>渋谷駅 【未収録】</p>
-<!--           <a href="../station/shibuya.html"></a> -->
+          <p>渋谷駅</p>
+          <a href="../station/shibuya.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_16687128611d40f4afabbbed89a0e9b2~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_16687128611d40f4afabbbed89a0e9b2~mv2.png" alt="新宿駅">
