--- a/line/yamanote.html
+++ b/line/yamanote.html
@@ -135,8 +135,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bb834125b698461cb7a22d462095ff48~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bb834125b698461cb7a22d462095ff48~mv2.png" alt="渋谷駅">
-          <p>渋谷駅 【未収録】</p>
-<!--           <a href="../station/shibuya.html"></a> -->
+          <p>渋谷駅</p>
+          <a href="../station/shibuya.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_f58c016d4c9d4c88b83b7faaad8972fe~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f58c016d4c9d4c88b83b7faaad8972fe~mv2.png" alt="恵比寿駅">
