--- a/line/ginza.html
+++ b/line/ginza.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png" alt="渋谷駅">
-          <p>渋谷駅 【未収録】</p>
-<!--           <a href="../station/shibuya.html"></a> -->
+          <p>渋谷駅</p>
+          <a href="../station/shibuya.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_14754f76f6ea480ba2a2eb42652a115d~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_14754f76f6ea480ba2a2eb42652a115d~mv2.png" alt="表参道駅">
