--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.2 東武東上線等 池袋駅 #1~#5･#1(立教)~#5(立教)･#1(汎用)~#5(汎用)",
+            text: "【ページ追加】2026.2.3 埼京線等 渋谷駅･#1~#4･#1(旧)~#4(旧)",
             url: null
           },
           {
