--- a/platform/otemachi_1.html
+++ b/platform/otemachi_1.html
@@ -10,18 +10,18 @@
   <link rel="stylesheet" href="marunouchi.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="大手町駅1番線の発車メロディ「快適乗降」の再現ができます！">
-  <meta property="og:title" content="大手町駅1番線「快適乗降」｜どこでも快適乗降">
+  <meta property="og:title" content="大手町駅1番線「快適乗降」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="大手町駅1番線「快適乗降」｜どこでも快適乗降">
-  <title>大手町駅1番線「快適乗降」｜どこでも快適乗降</title>
+  <meta property="og:site_name" content="大手町駅1番線「快適乗降」｜どこでもステーションベル">
+  <title>大手町駅1番線「快適乗降」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
     <div class="header-left">
       <a href="https://ssmn93.github.io/depart-melody/" class="title-link">
         <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" alt="アイコン" class="logo">
-        <h1 class="title">どこでも快適乗降</h1>
+        <h1 class="title">どこでもステーションベル</h1>
       </a>
     </div>
     <nav class="nav">
@@ -166,7 +166,7 @@
     <div class="md-flex md-justify-between">
       <a href="https://ssmn93.github.io/depart-melody" style="text-decoration:none;" class="footer__logo">
         <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" width="40" height="40" alt=" Logo" />
-        <p class="title">どこでも快適乗降</p>
+        <p class="title">どこでもステーションベル</p>
       </a>
       <ul class="footer__navi flex">
         <li><a href="https://ssmn93.github.io/depart-melody">ホーム</a></li>
