--- a/platform/otemachi_1.html
+++ b/platform/otemachi_1.html
@@ -174,8 +174,8 @@
         <li><a href="https://ssmn93.github.io/depart-melody/thanks.html">提供者一覧・二次利用</a></li>
         <li><a href="https://ssmn93.github.io/depart-melody/support.html">問い合わせ</a></li>
         <li><a href="https://ssmn93.github.io/depart-melody/ikst/ikst.html">IKST動静</a></li>
-        <li><a href="https://ssmn93.github.io/depart-melody/custom.html">カスタム快適乗降</a></li>
-        <li><a href="https://ssmn93.github.io/depart-melody/locate.html">ここから快適乗降</a></li>
+        <li><a href="https://ssmn93.github.io/depart-melody/custom.html">カスタムステーションベル</a></li>
+        <li><a href="https://ssmn93.github.io/depart-melody/locate.html">ここからステーションベル</a></li>
       </ul>
     </div>
     <hr />
