--- a/station/ikebukuro.html
+++ b/station/ikebukuro.html
@@ -105,17 +105,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_49fcd40a06664bab9eacad56ba08b8cb~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_49fcd40a06664bab9eacad56ba08b8cb~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>1番線 -丸ノ内線A線</h2>
-            <p>フランソワ 【未収録】</p>
+            <p>フランソワ</p>
           </div>
-          <!-- <a href="../platform/ikebukuro_m1.html"></a> -->
+          <a href="../platform/ikebukuro_m1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_49fcd40a06664bab9eacad56ba08b8cb~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_49fcd40a06664bab9eacad56ba08b8cb~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>2番線 -丸ノ内線A線</h2>
-            <p>キラリトレイン 【未収録】</p>
+            <p>キラリトレイン</p>
           </div>
-<!--           <a href="../platform/ikebukuro_m2.html"></a> -->
+          <a href="../platform/ikebukuro_m2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_b638981317184dd5a621df922d63c470~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_b638981317184dd5a621df922d63c470~mv2.png" alt="池袋駅">
