--- a/station/shibuya.html
+++ b/station/shibuya.html
@@ -129,17 +129,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>1番線 -銀座線B線</h2>
-            <p>道はここから 【未収録】</p>
+            <p>道はここから</p>
           </div>
-          <!-- <a href="../platform/shibuya_g1.html"></a> -->
+          <a href="../platform/shibuya_g1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>2番線 -銀座線B線</h2>
-            <p>アンディーン 【未収録】</p>
+            <p>アンディーン</p>
           </div>
-          <!-- <a href="../platform/shibuya_g2.html"></a> -->
+          <a href="../platform/shibuya_g2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_aeeab8d079924842a05ed98423102fd9~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_aeeab8d079924842a05ed98423102fd9~mv2.png" alt="渋谷駅">
