--- a/thanks.html
+++ b/thanks.html
@@ -2018,6 +2018,22 @@
             <td>池袋#5(東武) 発車放送</td>
             <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
           </tr>
+          <tr>
+            <td>フランソワ</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>キラリトレイン</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>道はここから</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>アンディーン</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
