--- a/station/koga.html
+++ b/station/koga.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -43,7 +42,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_be3d4d61ab08423dbda780804d17f5d1~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_be3d4d61ab08423dbda780804d17f5d1~mv2.png" alt="久喜駅"> -->
           <div class="platform">
             <h2>1番線 -宇都宮線上下</h2>
-            <p>木々の目覚めV1</p>
+            <p>JRE-IKST-021-12(首都圏3-8番) 〈変更前〉</p>
           </div>
           <a href="../platform/koga_1.html"></a>
         </div>
@@ -51,7 +50,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_be3d4d61ab08423dbda780804d17f5d1~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_be3d4d61ab08423dbda780804d17f5d1~mv2.png" alt="久喜駅"> -->
           <div class="platform">
             <h2>2番線 -宇都宮線下り</h2>
-            <p>木々の目覚めV1</p>
+            <p>JRE-IKST-021-01(首都圏3-1番) 〈変更前〉</p>
           </div>
           <a href="../platform/koga_2.html"></a>
         </div>
@@ -59,7 +58,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_be3d4d61ab08423dbda780804d17f5d1~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_be3d4d61ab08423dbda780804d17f5d1~mv2.png" alt="久喜駅"> -->
           <div class="platform">
             <h2>3番線 -宇都宮線上り</h2>
-            <p>遠い青空V1</p>
+            <p>JRE-IKST-021-02(首都圏3番) 〈変更前〉</p>
           </div>
           <a href="../platform/koga_3.html"></a>
         </div>
@@ -67,7 +66,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_d5c75f133839407eb2ebb6989371adc8~mv2.png/v1/fill/w_382,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d5c75f133839407eb2ebb6989371adc8~mv2.png" alt="久喜駅"> -->
           <div class="platform">
             <h2>4番線 -宇都宮線上り</h2>
-            <p>遠い青空V1</p>
+            <p>JRE-IKST-021-13(首都圏3-9番) 〈変更前〉</p>
           </div>
           <a href="../platform/koga_4.html"></a>
         </div>
