--- a/tokyo-metro.html
+++ b/tokyo-metro.html
@@ -47,6 +47,14 @@
           <a href="line/chiyoda.html"></a>
         </div>         
         <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/副都心線.jpg" alt="副都心線">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_9f0617ae76f54e0eb993f8a7879823fb~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_9f0617ae76f54e0eb993f8a7879823fb~mv2.png">
+            <p>副都心線</p>
+          </div>
+          <a href="line/fukutoshin.html"></a>
+        </div> 
+        <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/銀座線.JPG" alt="銀座線">
           <div class="line">
             <img src="https://static.wixstatic.com/media/0acb38_ce8d3fd2e6024b0fb2de559a95136640~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_ce8d3fd2e6024b0fb2de559a95136640~mv2.png">
@@ -70,6 +78,8 @@
           </div>
           <a href="line/marunouchi.html"></a>
         </div> 
+      </div>
+      <div class="container">
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/南北線.jpeg" alt="南北線">
           <div class="line">
@@ -77,6 +87,38 @@
             <p>南北線</p>
           </div>
           <a href="line/namboku.html"></a>
+        </div> 
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/有楽町線.jpg" alt="有楽町線">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_9e466e4a605a499a976fd725b2ff3563~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_9e466e4a605a499a976fd725b2ff3563~mv2.png">
+            <p>有楽町線</p>
+          </div>
+          <a href="line/yurakucho.html"></a>
+        </div>         
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/銀座線.JPG" alt="銀座線">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_ce8d3fd2e6024b0fb2de559a95136640~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_ce8d3fd2e6024b0fb2de559a95136640~mv2.png">
+            <p>銀座線</p>
+          </div>
+          <a href="line/ginza.html"></a>
+        </div> 
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/日比谷線.jpeg" alt="日比谷線">
+          <div class="line">
+            <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/0acb38_061a898c582d4276b9c1adf4fd87d860~mv2.png">
+            <p>日比谷線</p>
+          </div>
+          <a href="line/hibiya.html"></a>
+        </div> 
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/丸ノ内線.jpeg" alt="丸ノ内線">
+          <div class="line">
+            <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/0acb38_c1b96691f24f4f8caf42b35cfe73f97a~mv2.png">
+            <p>丸ノ内線</p>
+          </div>
+          <a href="line/marunouchi.html"></a>
         </div> 
       </div>
 <!--       <h1>特集でさがす</h1>
