--- a/thanks.html
+++ b/thanks.html
@@ -193,6 +193,14 @@
             <td>東武東上線</td>
             <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
           </tr>
+          <tr>
+            <td>副都心線</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
+          <tr>
+            <td>有楽町線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>         
         </tbody>
       </table>
       <h1>サイトBGM提供</h1>
