--- a/platform/ikebukuro_f6.html
+++ b/platform/ikebukuro_f6.html
@@ -7,7 +7,7 @@
   <meta name="description" content="池袋駅6番線の発車メロディ「Morning Station」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
-  <link rel="stylesheet" href="marunouchi.css">
+  <link rel="stylesheet" href="fukutoshin.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="池袋駅6番線の発車メロディ「Morning Station」の再現ができます！">
   <meta property="og:title" content="池袋駅6番線「Morning Station」｜どこでもステーションベル">
