--- a/station/ikebukuro.html
+++ b/station/ikebukuro.html
@@ -121,33 +121,33 @@
           <img src="https://static.wixstatic.com/media/0acb38_b638981317184dd5a621df922d63c470~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_b638981317184dd5a621df922d63c470~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>3番線 -有楽町線A線</h2>
-            <p>bright 【未収録】</p>
+            <p>bright</p>
           </div>
-<!--           <a href="../platform/ikebukuro_y3.html"></a> -->
+          <a href="../platform/ikebukuro_y3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_b638981317184dd5a621df922d63c470~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_b638981317184dd5a621df922d63c470~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>4番線 -有楽町線B線</h2>
-            <p>OK! 【未収録】</p>
+            <p>OK!</p>
           </div>
-<!--           <a href="../platform/ikebukuro_y4.html"></a> -->
+          <a href="../platform/ikebukuro_y4.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3b91d2cbeeb54082b73c3c0733bd6ccc~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3b91d2cbeeb54082b73c3c0733bd6ccc~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>5番線 -副都心線A線</h2>
-            <p>TOKYO CITY 【未収録】</p>
+            <p>TOKYO CITY</p>
           </div>
-<!--           <a href="../platform/ikebukuro_f5.html"></a> -->
+          <a href="../platform/ikebukuro_f5.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3b91d2cbeeb54082b73c3c0733bd6ccc~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3b91d2cbeeb54082b73c3c0733bd6ccc~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>6番線 -副都心線B線</h2>
-            <p>Morning Station 【未収録】</p>
+            <p>Morning Station</p>
           </div>
-<!--           <a href="../platform/ikebukuro_f6.html"></a> -->
+          <a href="../platform/ikebukuro_f6.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png" alt="池袋駅">
