--- a/station/shibuya.html
+++ b/station/shibuya.html
@@ -113,7 +113,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>5番線 -副都心線B線</h2>
-            <p>おとぎのワルツ 【未収録】</p>
+            <p>おとぎのワルツ</p>
           </div>
 <!--           <a href="../platform/shibuya_f5.html"></a> -->
         </div>
@@ -121,9 +121,9 @@
           <img src="https://static.wixstatic.com/media/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>6番線 -副都心線B線</h2>
-            <p>愛ステーション 【未収録】</p>
+            <p>愛ステーション</p>
           </div>
-<!--           <a href="../platform/shibuya_f6.html"></a> -->
+          <a href="../platform/shibuya_f6.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f68080005ff14f11bab322685499e5d8~mv2.png" alt="渋谷駅">
