--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.3 有楽町線・副都心線・同線等 渋谷駅･#1~#4･#1(旧)~#4(旧)･#1(銀座線)･#2(銀座線)・池袋駅 #1(丸ノ内線)･#2(丸ノ内線)",
+            text: "【ページ追加】2026.2.3 有楽町線・副都心線・同線等 渋谷駅･#1~#4･#1(旧)~#4(旧)･#1(銀座線)･#2(銀座線)･#5(副都心線)･#6(副都心線)・池袋駅 #1(メトロ)~#6(メトロ)",
             url: null
           },
           {
