--- a/thanks.html
+++ b/thanks.html
@@ -2042,6 +2042,30 @@
             <td>アンディーン</td>
             <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
           </tr>
+          <tr>
+            <td>bright</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>OK!</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>TOKYO CITY</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>Morning Station</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>おとぎのワルツ</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>愛ステーション</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
