--- a/station/shibuya.html
+++ b/station/shibuya.html
@@ -107,7 +107,7 @@
             <h2>5番線 -東急東横線下り</h2>
             <p>Departing from New Shibuya Terminal 【未収録】</p>
           </div>
-<!--           <a href="../platform/shibuya_ty5.html"></a> -->
+          <!-- <a href="../platform/shibuya_ty5.html"></a> -->
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png" alt="渋谷駅">
@@ -115,7 +115,7 @@
             <h2>5番線 -副都心線B線</h2>
             <p>おとぎのワルツ</p>
           </div>
-<!--           <a href="../platform/shibuya_f5.html"></a> -->
+          <a href="../platform/shibuya_f5.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png" alt="渋谷駅">
