--- a/platform/shibuya_ty4.html
+++ b/platform/shibuya_ty4.html
@@ -74,7 +74,7 @@
           
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
-        <button id="departure" class="final" style="margin-left: 20px; display: none;">発車放送</button>
+        <button id="departure" class="final" style="margin-left: 20px;">発車放送</button>
       </div>
     
     <script>
