--- a/station/shibuya.html
+++ b/station/shibuya.html
@@ -89,25 +89,25 @@
           <img src="https://static.wixstatic.com/media/0acb38_da28233e09b3466788468f9a520f38ce~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_da28233e09b3466788468f9a520f38ce~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>3番線 -東急東横線下り</h2>
-            <p>Departing from New Shibuya Terminal 【未収録】</p>
+            <p>Departing from New Shibuya Terminal</p>
           </div>
-<!--           <a href="../platform/shibuya_ty3.html"></a> -->
+          <a href="../platform/shibuya_ty3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_da28233e09b3466788468f9a520f38ce~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_da28233e09b3466788468f9a520f38ce~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>4番線 -東急東横線下り</h2>
-            <p>Departing from New Shibuya Terminal 【未収録】</p>
+            <p>Departing from New Shibuya Terminal</p>
           </div>
-<!--           <a href="../platform/shibuya_ty4.html"></a> -->
+          <a href="../platform/shibuya_ty4.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_da28233e09b3466788468f9a520f38ce~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_da28233e09b3466788468f9a520f38ce~mv2.png" alt="渋谷駅">
           <div class="platform">
             <h2>5番線 -東急東横線下り</h2>
-            <p>Departing from New Shibuya Terminal 【未収録】</p>
+            <p>Departing from New Shibuya Terminal</p>
           </div>
-          <!-- <a href="../platform/shibuya_ty5.html"></a> -->
+          <a href="../platform/shibuya_ty5.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_35d311f291a74a22bfe35df1a233484f~mv2.png" alt="渋谷駅">
