--- a/platform/sano_1_o1.html
+++ b/platform/sano_1_o1.html
@@ -181,6 +181,7 @@
         <select name="change" id="change" onchange="location.href=value;">
           <option value="sano_1_o1.html">キッズステーション</option>
           <option value="sano_1.html">JRE-IKST-028-01(首都圏27番)</option>
+          <option value="sano_1_o2.html">遠い青空</option>
         </select>
 
       
