--- a/thanks.html
+++ b/thanks.html
@@ -2066,6 +2066,14 @@
             <td>愛ステーション</td>
             <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
           </tr>
+          <tr>
+            <td>遠い青空V2</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>佐野#1 旧戸閉放送</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
