--- a/thanks.html
+++ b/thanks.html
@@ -2074,6 +2074,22 @@
             <td>佐野#1 旧戸閉放送</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>春になったら verA</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>春になったら verB</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>原宿a</td>
+            <td>Sky high様</td>
+          </tr>
+          <tr>
+            <td>原宿b</td>
+            <td>Sky high様</td>
+          </tr>
         </tbody>
       </table>
     </div>
