--- a/line/yamanote.html
+++ b/line/yamanote.html
@@ -130,8 +130,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2dd04460c16e4f32889f90d05ed48922~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2dd04460c16e4f32889f90d05ed48922~mv2.png" alt="原宿駅">
-          <p>原宿駅 【未収録】</p>
-<!--           <a href="../station/harajuku.html"></a> -->
+          <p>原宿駅</p>
+          <a href="../station/harajuku.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bb834125b698461cb7a22d462095ff48~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bb834125b698461cb7a22d462095ff48~mv2.png" alt="渋谷駅">
