--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.3 有楽町線・副都心線・同線等 渋谷駅･#1~#4･#1(旧)~#4(旧)･#1(銀座線)･#2(銀座線)･#3(東横線)~#5(東横線)･#5(副都心線)･#6(副都心線)・池袋駅 #1(メトロ)~#6(メトロ)・両毛線等 佐野駅 #1(遠い青空V2)",
+            text: "【ページ追加】2026.2.4 山手線 原宿駅･#1･#2･#1(原宿a)･#2(原宿b)･#1(春になったら)･#2(春になったら)",
             url: null
           },
           {
