--- a/station/harajuku.html
+++ b/station/harajuku.html
@@ -48,7 +48,7 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2dd04460c16e4f32889f90d05ed48922~mv2.png/v1/fill/w_287,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2dd04460c16e4f32889f90d05ed48922~mv2.png" alt="原宿駅">
           <div class="platform">
-            <h2>2番線 -山手線内回り</h2>
+            <h2>2番線 -山手線外回り</h2>
             <p>JRE-IKST-010-02(首都圏11-1番)</p>
           </div>
           <a href="../platform/harajuku_2.html"></a>
