--- a/thanks.html
+++ b/thanks.html
@@ -1863,8 +1863,12 @@
             <td><a href="https://x.com/i/user/1552109133385838592">⛰️様</a></td>
           </tr>
           <tr>
-            <td>色・ホワイトブレンド</td>
+            <td>色・ホワイトブレンド(館林)</td>
             <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>色・ホワイトブレンド(東武日光)</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
           </tr>
           <tr>
             <td>東武ワールドスクウェア テーマソング 鬼怒川温泉ver</td>
