--- a/tokyo-metro.html
+++ b/tokyo-metro.html
@@ -89,6 +89,14 @@
           <a href="line/namboku.html"></a>
         </div> 
         <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東西線.jpg" alt="東西線">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_39e01e40964d4cf6a85c7825a4982205~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_39e01e40964d4cf6a85c7825a4982205~mv2.png">
+            <p>東西線</p>
+          </div>
+          <a href="line/tozai.html"></a>
+        </div> 
+        <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/有楽町線.jpg" alt="有楽町線">
           <div class="line">
             <img src="https://static.wixstatic.com/media/0acb38_9e466e4a605a499a976fd725b2ff3563~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_9e466e4a605a499a976fd725b2ff3563~mv2.png">
@@ -96,14 +104,6 @@
           </div>
           <a href="line/yurakucho.html"></a>
         </div>         
-        <div class="column columnj" style="visibility: hidden;">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/銀座線.JPG" alt="銀座線">
-          <div class="line">
-            <img src="https://static.wixstatic.com/media/0acb38_ce8d3fd2e6024b0fb2de559a95136640~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_ce8d3fd2e6024b0fb2de559a95136640~mv2.png">
-            <p>銀座線</p>
-          </div>
-          <a href="line/ginza.html"></a>
-        </div> 
         <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/日比谷線.jpeg" alt="日比谷線">
           <div class="line">
