--- a/thanks.html
+++ b/thanks.html
@@ -200,6 +200,10 @@
           <tr>
             <td>有楽町線</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
+          <tr>
+            <td>東西線</td>
+            <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
           </tr>         
         </tbody>
       </table>
