--- a/station/otemachi.html
+++ b/station/otemachi.html
@@ -58,17 +58,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_4b090fcaf5e040d3897d0af83e5b8366~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4b090fcaf5e040d3897d0af83e5b8366~mv2.png" alt="大手町駅">
           <div class="platform">
             <h2>3番線 -東西線A線</h2>
-            <p>A Day in the Metro 【未収録】</p>
+            <p>A Day in the Metro</p>
           </div>
-<!--           <a href="../platform/otemachi_3.html"></a> -->
+          <a href="../platform/otemachi_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4b090fcaf5e040d3897d0af83e5b8366~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4b090fcaf5e040d3897d0af83e5b8366~mv2.png" alt="大手町駅">
           <div class="platform">
             <h2>4番線 -東西線B線</h2>
-            <p>Beyond the Metropolis 【未収録】</p>
+            <p>Beyond the Metropolis</p>
           </div>
-<!--           <a href="../platform/otemachi_4.html"></a> -->
+          <a href="../platform/otemachi_4.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9bc1a522765744ec87953d818b5ed828~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9bc1a522765744ec87953d818b5ed828~mv2.png" alt="大手町駅">
