--- a/thanks.html
+++ b/thanks.html
@@ -2098,6 +2098,14 @@
             <td>原宿b</td>
             <td>Sky high様</td>
           </tr>
+          <tr>
+            <td>A Day in the Metro (大手町#3)</td>
+            <td><a href="https://x.com/i/user/1818032367099068416">上川町様</a></td>
+          </tr>
+          <tr>
+            <td>Beyond the Metropolis (大手町#4)</td>
+            <td><a href="https://x.com/i/user/1818032367099068416">上川町様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
