--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.4 山手線 原宿駅･#1･#2･#1(原宿a)･#2(原宿b)･#1(春になったら)･#2(春になったら)・東京メトロ東西線",
+            text: "【ページ追加】2026.2.4 山手線 原宿駅･#1･#2･#1(原宿a)･#2(原宿b)･#1(春になったら)･#2(春になったら)・東京メトロ東西線・同線等 大手町駅 #3･#4",
             url: null
           },
           {
