--- a/line/tozai.html
+++ b/line/tozai.html
@@ -95,8 +95,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2c5c67fefcec4b32a04d749ef8fa7f83~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2c5c67fefcec4b32a04d749ef8fa7f83~mv2.png" alt="門前仲町駅">
-          <p>門前仲町駅 【未収録】</p>
-          <!-- <a href="../station/monzennakacho.html"></a> -->
+          <p>門前仲町駅</p>
+          <a href="../station/monzennakacho.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_fb46c816d5814850a82d1e6013b1d3a2~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_fb46c816d5814850a82d1e6013b1d3a2~mv2.png" alt="木場駅">
