--- a/thanks.html
+++ b/thanks.html
@@ -2106,6 +2106,14 @@
             <td>Beyond the Metropolis (大手町#4)</td>
             <td><a href="https://x.com/i/user/1818032367099068416">上川町様</a></td>
           </tr>
+          <tr>
+            <td>A Day in the Metro (門前仲町#1)</td>
+            <td><a href="https://x.com/i/user/1818032367099068416">上川町様</a></td>
+          </tr>
+          <tr>
+            <td>Beyond the Metropolis (門前仲町#2)</td>
+            <td><a href="https://x.com/i/user/1818032367099068416">上川町様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
