--- a/tokyo-metro.html
+++ b/tokyo-metro.html
@@ -104,13 +104,13 @@
           </div>
           <a href="line/yurakucho.html"></a>
         </div>         
-        <div class="column columnj" style="visibility: hidden;">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/日比谷線.jpeg" alt="日比谷線">
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/半蔵門線.jpg" alt="半蔵門線">
           <div class="line">
-            <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/0acb38_061a898c582d4276b9c1adf4fd87d860~mv2.png">
-            <p>日比谷線</p>
+            <img src="https://static.wixstatic.com/media/0acb38_ee38240e0d7846a0aa22df3a68f330b0~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_ee38240e0d7846a0aa22df3a68f330b0~mv2.png">
+            <p>半蔵門線</p>
           </div>
-          <a href="line/hibiya.html"></a>
+          <a href="line/hanzomon.html"></a>
         </div> 
         <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/丸ノ内線.jpeg" alt="丸ノ内線">
