--- a/thanks.html
+++ b/thanks.html
@@ -205,6 +205,10 @@
             <td>東西線</td>
             <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
           </tr>         
+          <tr>
+            <td>半蔵門線</td>
+            <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
+          </tr>         
         </tbody>
       </table>
       <h1>サイトBGM提供</h1>
