--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/1/27 秋川駅・武蔵引田駅・武蔵増戸駅・武蔵五日市駅 メロディ変更",
+            "2026/2/5 羽沢横浜国大駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
