--- a/station/hazawayokohamakokudai.html
+++ b/station/hazawayokohamakokudai.html
@@ -42,25 +42,25 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="羽沢横浜国大駅"> -->
           <div class="platform">
             <h2>1番線 -相鉄新横浜線下り</h2>
-            <p>ブザー 【未収録】</p>
+            <p>ブザー</p>
           </div>
-          <!-- <a href="../platform/hazawayokohamakokudai_1_d.html"></a> -->
+          <a href="../platform/hazawayokohamakokudai_1_d.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="羽沢横浜国大駅"> -->
           <div class="platform">
             <h2>1番線 -相鉄･JR直通線上り</h2>
-            <p>【使用曲不明・未収録】</p>
+            <p>JRE-IKST-006-01(首都圏5番)</p>
           </div>
-          <!-- <a href="../platform/hazawayokohamakokudai_1_u.html"></a> -->
+          <a href="../platform/hazawayokohamakokudai_1_u.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="羽沢横浜国大駅"> -->
           <div class="platform">
             <h2>2番線 -相鉄新横浜線上り</h2>
-            <p>ブザー 【未収録】</p>
+            <p>ブザー</p>
           </div>
-          <!-- <a href="../platform/hazawayokohamakokudai_2_s.html"></a> -->
+          <a href="../platform/hazawayokohamakokudai_2_s.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="羽沢横浜国大駅"> -->
