--- a/platform/hazawayokohamakokudai_2_j.html
+++ b/platform/hazawayokohamakokudai_2_j.html
@@ -179,8 +179,8 @@
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="hazawayokohamakokudai_2.html">JRE-IKST-006-02(首都圏5-1番)</option>
-          <option value="hazawayokohamakokudai_2_o.html">キッズステーション</option>
+          <option value="hazawayokohamakokudai_2_j.html">JRE-IKST-006-02(首都圏5-1番)</option>
+          <option value="hazawayokohamakokudai_2_j_o.html">キッズステーション</option>
         </select>
 
       
