--- a/station/hazawayokohamakokudai.html
+++ b/station/hazawayokohamakokudai.html
@@ -41,8 +41,8 @@
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="羽沢横浜国大駅"> -->
           <div class="platform">
-            <h2>1番線 -相鉄新横浜線下り</h2>
-            <p>ブザー</p>
+            <h2>1番線 -相鉄新横浜線上下</h2>
+            <p>ベル</p>
           </div>
           <a href="../platform/hazawayokohamakokudai_1_d.html"></a>
         </div>
@@ -58,7 +58,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="羽沢横浜国大駅"> -->
           <div class="platform">
             <h2>2番線 -相鉄新横浜線上り</h2>
-            <p>ブザー</p>
+            <p>ベル</p>
           </div>
           <a href="../platform/hazawayokohamakokudai_2_s.html"></a>
         </div>
