--- a/platform/hazawayokohamakokudai_1_j_o.html
+++ b/platform/hazawayokohamakokudai_1_j_o.html
@@ -165,7 +165,7 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/キッズステーション.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/キッズステーション_羽沢横浜国大.mp3"></audio>
     <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/戸閉放送_羽沢横浜国大1番.mp3"></audio>
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
@@ -179,8 +179,8 @@
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="hazawayokohamakokudai_2_j_o.html">キッズステーション</option>
-          <option value="hazawayokohamakokudai_2_j.html">JRE-IKST-006-01(首都圏5番)</option>
+          <option value="hazawayokohamakokudai_1_j_o.html">キッズステーション</option>
+          <option value="hazawayokohamakokudai_1_j.html">JRE-IKST-006-01(首都圏5番)</option>
         </select>
 
       
