--- a/platform/hazawayokohamakokudai_1_s.html
+++ b/platform/hazawayokohamakokudai_1_s.html
@@ -58,7 +58,7 @@
           </g> 
             <circle class="button" id="onButton" cx="480" cy="373" r="122" fill="#fbf1e8" stroke="#000000" stroke-width="1.0"/>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/電子電鈴_羽沢横浜国大1番.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/ベル_羽沢横浜国大1番.mp3"></audio>
 <!--     <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E7%94%B7%E5%A3%B03%E7%95%AA.mp3"></audio> -->
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
