--- a/line/sobu.html
+++ b/line/sobu.html
@@ -145,8 +145,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_40aea717a1d643a089caeb89fe926230~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_40aea717a1d643a089caeb89fe926230~mv2.png" alt="錦糸町駅">
-          <p>錦糸町駅 【未収録】</p>
-<!--           <a href="../station/kinshicho.html"></a> -->
+          <p>錦糸町駅</p>
+          <a href="../station/kinshicho.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_c04074cfa9fb4873bf02806c661e7f1f~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_c04074cfa9fb4873bf02806c661e7f1f~mv2.png" alt="亀戸駅">
