--- a/line/yokosuka.html
+++ b/line/yokosuka.html
@@ -145,8 +145,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_beb9e9ee091c427c8413f0ce1883576d~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_beb9e9ee091c427c8413f0ce1883576d~mv2.png" alt="錦糸町駅">
-          <p>錦糸町駅 【未収録】</p>
-<!--           <a href="../station/kinshicho.html"></a> -->
+          <p>錦糸町駅</p>
+          <a href="../station/kinshicho.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_d72ddd3f1e934bd3ba87d39898abb463~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d72ddd3f1e934bd3ba87d39898abb463~mv2.png" alt="新小岩駅">
