--- a/line/hanzomon.html
+++ b/line/hanzomon.html
@@ -100,8 +100,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_dc1d83cac3614c31a09aaa483efc0ff8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_dc1d83cac3614c31a09aaa483efc0ff8~mv2.png" alt="錦糸町駅">
-          <p>錦糸町駅 【未収録】</p>
-<!--           <a href="../station/kinshicho.html"></a> -->
+          <p>錦糸町駅</p>
+          <a href="../station/kinshicho.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_63e77b96ece844469bfe6c3ab9ae7cdd~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_63e77b96ece844469bfe6c3ab9ae7cdd~mv2.png" alt="押上駅">
