--- a/thanks.html
+++ b/thanks.html
@@ -2118,6 +2118,14 @@
             <td>Beyond the Metropolis (門前仲町#2)</td>
             <td><a href="https://x.com/i/user/1818032367099068416">上川町様</a></td>
           </tr>
+          <tr>
+            <td>光彩都市</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
+            <td>五月雨</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
