--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.4 山手線 原宿駅･#1･#2･#1(原宿a)･#2(原宿b)･#1(春になったら)･#2(春になったら)・東京メトロ東西線・同線等 大手町駅 #3･#4・門前仲町駅･#1･#2・東京メトロ半蔵門線",
+            text: "【ページ追加】2026.2.5 半蔵門線・同線等 錦糸町駅･#1~#4･#1(旧)~#4(旧)･#1(メトロ)･#2(メトロ)",
             url: null
           },
           {
