--- a/line/saikyo.html
+++ b/line/saikyo.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_ef2480a9ebba476e84bf41c4207f2f65~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_ef2480a9ebba476e84bf41c4207f2f65~mv2.png" alt="羽沢横浜国大駅">
-          <p>羽沢横浜国大駅 【未収録】</p>
-<!--           <a href="../station/hazawayokohamakokudai.html"></a> -->
+          <p>羽沢横浜国大駅</p>
+          <a href="../station/hazawayokohamakokudai.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_efd861404216488985a747f3518ebf28~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_efd861404216488985a747f3518ebf28~mv2.png" alt="武蔵小杉駅">
