--- a/thanks.html
+++ b/thanks.html
@@ -2126,6 +2126,22 @@
             <td>五月雨</td>
             <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
           </tr>
+          <tr>
+            <td>ブザー (羽沢横浜国大#1)</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>
+          <tr>
+            <td>羽沢横浜国大#1 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1722556819862925312">ハンドラー🍥様</a></td>
+          </tr>
+          <tr>
+            <td>ベル (羽沢横浜国大#1)</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>
+          <tr>
+            <td>羽沢横浜国大#2 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
