--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.5 半蔵門線・同線等 錦糸町駅･#1~#4･#1(旧)~#4(旧)･#1(メトロ)･#2(メトロ)",
+            text: "【ページ追加】2026.2.5 相鉄新横浜線等 羽沢横浜国大駅･#1･#2･#1(旧)･#2(旧)・半蔵門線・同線等 錦糸町駅･#1~#4･#1(旧)~#4(旧)･#1(メトロ)･#2(メトロ)",
             url: null
           },
           {
