--- a/thanks.html
+++ b/thanks.html
@@ -2071,6 +2071,10 @@
             <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
           </tr>
           <tr>
+            <td>Departing from New Shibuya Terminal</td>
+            <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
+          </tr>
+          <tr>
             <td>おとぎのワルツ</td>
             <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
           </tr>
