--- a/station/yotsuya.html
+++ b/station/yotsuya.html
@@ -74,17 +74,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_c299c6182bbc43a39eb11f1216d80590~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_c299c6182bbc43a39eb11f1216d80590~mv2.png" alt="四ツ谷駅">
           <div class="platform">
             <h2>1番線 -丸ノ内線A線</h2>
-            <p>駅ウォーキング 【未収録】</p>
+            <p>駅ウォーキング</p>
           </div>
-          <!-- <a href="../platform/yotsuya_m1.html"></a> -->
+          <a href="../platform/yotsuya_m1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_c299c6182bbc43a39eb11f1216d80590~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_c299c6182bbc43a39eb11f1216d80590~mv2.png" alt="四ツ谷駅">
           <div class="platform">
             <h2>2番線 -丸ノ内線B線</h2>
-            <p>ヒーリングリフォーム電車 【未収録】</p>
+            <p>ヒーリングリフォーム電車</p>
           </div>
-          <!-- <a href="../platform/yotsuya_m2.html"></a> -->
+          <a href="../platform/yotsuya_m2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0665e22a103f4b239b1df9b1bb3cddb4~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0665e22a103f4b239b1df9b1bb3cddb4~mv2.png" alt="四ツ谷駅">
