--- a/thanks.html
+++ b/thanks.html
@@ -2146,6 +2146,14 @@
             <td>羽沢横浜国大#2 戸閉放送</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
           </tr>
+          <tr>
+            <td>駅ウォーキング</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>ヒーリングリフォーム電車</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
