--- a/line/namboku.html
+++ b/line/namboku.html
@@ -85,8 +85,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3d2c8f0782ae43848925f640f4a9a16a~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3d2c8f0782ae43848925f640f4a9a16a~mv2.png" alt="飯田橋駅">
-          <p>飯田橋駅 【未収録】</p>
-<!--           <a href="../station/iidabashi.html"></a> -->
+          <p>飯田橋駅</p>
+          <a href="../station/iidabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_103490a4dd5b469c9a5b5ac48e4af652~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_103490a4dd5b469c9a5b5ac48e4af652~mv2.png" alt="後楽園駅">
