--- a/line/tozai.html
+++ b/line/tozai.html
@@ -65,8 +65,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0c2dbfaa1a6b4912b0a3b40abca74d3a~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0c2dbfaa1a6b4912b0a3b40abca74d3a~mv2.png" alt="飯田橋駅">
-          <p>飯田橋駅 【未収録】</p>
-          <!-- <a href="../station/iidabashi.html"></a> -->
+          <p>飯田橋駅</p>
+          <a href="../station/iidabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_d248a759d17b4de8a73f7a2097111f0f~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d248a759d17b4de8a73f7a2097111f0f~mv2.png" alt="九段下駅">
