--- a/line/yurakucho.html
+++ b/line/yurakucho.html
@@ -100,8 +100,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7ea18a68186f4e679874da4718c887b7~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7ea18a68186f4e679874da4718c887b7~mv2.png" alt="飯田橋駅">
-          <p>飯田橋駅 【未収録】</p>
-<!--           <a href="../station/iidabashi.html"></a> -->
+          <p>飯田橋駅</p>
+          <a href="../station/iidabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_baf3b98ff0df498890921b4ec4062997~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_baf3b98ff0df498890921b4ec4062997~mv2.png" alt="市ヶ谷駅">
