--- a/thanks.html
+++ b/thanks.html
@@ -2154,6 +2154,14 @@
             <td>ヒーリングリフォーム電車</td>
             <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
           </tr>
+          <tr>
+            <td>ラブリートレイン</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>風のゆくえ</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
