--- a/platform/maihama_2_o4.html
+++ b/platform/maihama_2_o4.html
@@ -180,10 +180,10 @@
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
           <option value="maihama_2_o4.html">Brand New Day verB</option>
-          <option value="maihama_2.html">It's A Small World V2</option>
+          <option value="maihama_2.html">It's a Small World V2</option>
           <option value="maihama_2_o1.html">Let It Go〜ありのままで〜 V2</option>
           <option value="maihama_2_o2.html">Living in Color</option>
-          <option value="maihama_2_o3.html">It's A Small World V1</option>
+          <option value="maihama_2_o3.html">It's a Small World V1</option>
           <option value="maihama_2_o5.html">When Your Heart Makes A Wish verB</option>
         </select>
 
